--- a/src/pages/Comments/comment.css
+++ b/src/pages/Comments/comment.css
@@ -11,8 +11,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 18px 0;
-    border-bottom: 1px solid black;
+    padding: 18px;
+    margin-bottom: 10px;
+    background: rgba(255, 165, 0, 0.53);
+    border-radius: 20px;
 }
 
 h3 {
