--- a/src/pages/LiveChat/chatArea.css
+++ b/src/pages/LiveChat/chatArea.css
@@ -11,6 +11,7 @@
     display: flex;
     background-color: aliceblue;
     padding: 10px;
+    flex-direction: column;
 }
 .chat-history{
     border: 1px solid black;
