--- a/src/pages/LiveChat/chatArea.css
+++ b/src/pages/LiveChat/chatArea.css
@@ -1,25 +1,31 @@
 .chat-area{
-    width: 300px;
-    height: 500px;
-    background-color: lightgray;
-    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    gap: 3px;
+    justify-content: flex-start;
+    width: 50rem;
+    height: 38rem;
+    z-index: 2;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    box-shadow: 0 0 8rem 0 rgba(0, 0, 0, 0.1), 0rem 2rem 4rem -3rem rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
 }
 .chat-list{
     display: flex;
     background-color: aliceblue;
     padding: 10px;
     flex-direction: column;
+    gap: 15px;
+    justify-content: flex-start;
 }
 .chat-history{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    height: 90%;
-    max-height: 90%;
-    overflow-y: scroll;
+    padding: 1rem;
+    background: var(--bg-chat-history);
+    flex-shrink: 2;
+    overflow-y: auto;
+    box-shadow: inset 0 2rem 2rem -2rem rgba(0, 0, 0, 0.05), inset 0 -2rem 2rem -2rem rgba(0, 0, 0, 0.05);
+    min-height: 75%;
+
 }
 
 .chat-input{
@@ -28,18 +34,38 @@
    
 }
 
-.message-input{ border: 1px solid greenyellow;
+.message-input{
+    box-sizing: border-box;
+    border: none;
+    background-image: none;
+    background-color: white;
+    padding: 0.3rem 1rem;
+    margin-right: 1rem;
+    border-radius: 1.125rem;
+    flex-grow: 1;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1), 0rem 1rem 1rem -1rem rgba(0, 0, 0, 0.2);
+    letter-spacing: 0.025em;
+    color: black;
+    height:4rem ;
 }
 
 .message{
-    padding: 5px;
     background-color: aquamarine;
-    border-radius: 5px;
-    margin: 5px;
-    border: 1px solid black;
+    box-sizing: border-box;
+    padding: 0.5rem 1rem;
+    margin: 1rem;
+    border-radius: 1.125rem 1.125rem 1.125rem 0;
+    min-height: 2.25rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    max-width: 66%;
+    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.075), 0rem 1rem 1rem -1rem rgba(0, 0, 0, 0.1);
+    
 }
 .admin-msg{
-    text-align: right;
+    margin: 1rem 1rem 1rem auto;
+    border-radius: 1.125rem 1.125rem 0 1.125rem;
     background-color: rgb(190, 227, 255);
 
 }
@@ -52,4 +78,20 @@ background-color: rgb(185, 243, 179);
 .messageLabel{
     font-weight: bold;
     text-align: left;
+    text-transform: capitalize
+}
+.send-button{
+   max-width: 90px;
+   min-width: 50px;
+   border-radius: 5px;
+   padding: 0;
+
+}
+
+.singleChat{
+    text-transform: capitalize ;
+    border: 1px solid rgba(125, 124, 152, 0.434);
+    border-width: thin;
+    border-radius: 5px ;
+    padding: 5px;
 }
